[package]
name = "cpu6502emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
chrono = "0.4.23"
fon = "0.6.0"
rand = "0.8.5"
rodio = "0.16.0"
timer = "0.2.0"
twang = "0.9.0"
